; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_random-sysctl-linux.c_uv__random_sysctl.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_random-sysctl-linux.c_uv__random_sysctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uv__sysctl_args = type { i32*, i8*, i64*, i32 }

@uv__random_sysctl.name = internal global [3 x i32] [i32 1, i32 40, i32 6], align 4
@UV_ENOSYS = common dso_local global i32 0, align 4
@SYS__sysctl = common dso_local global i32 0, align 4
@UV_EIO = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv__random_sysctl(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.uv__sysctl_args, align 8
  %7 = alloca [16 x i8], align 16
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %11 = load i8*, i8** %4, align 8
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds i8, i8* %12, i64 %13
  store i8* %14, i8** %9, align 8
  br label %15

15:                                               ; preds = %2
  %16 = load i8*, i8** %8, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = icmp ult i8* %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %15
  %20 = call i32 @memset(%struct.uv__sysctl_args* %6, i32 0, i32 32)
  %21 = getelementptr inbounds %struct.uv__sysctl_args, %struct.uv__sysctl_args* %6, i32 0, i32 0
  store i32* getelementptr inbounds ([3 x i32], [3 x i32]* @uv__random_sysctl.name, i64 0, i64 0), i32** %21, align 8
  %22 = call i32 @ARRAY_SIZE(i32* getelementptr inbounds ([3 x i32], [3 x i32]* @uv__random_sysctl.name, i64 0, i64 0))
  %23 = getelementptr inbounds %struct.uv__sysctl_args, %struct.uv__sysctl_args* %6, i32 0, i32 3
  store i32 %22, i32* %23, align 8
  %24 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %25 = getelementptr inbounds %struct.uv__sysctl_args, %struct.uv__sysctl_args* %6, i32 0, i32 1
  store i8* %24, i8** %25, align 8
  %26 = getelementptr inbounds %struct.uv__sysctl_args, %struct.uv__sysctl_args* %6, i32 0, i32 2
  store i64* %10, i64** %26, align 8
  store i64 16, i64* %10, align 8
  %27 = load i32, i32* @UV_ENOSYS, align 4
  store i32 %27, i32* %3, align 4
  br label %29

28:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @memset(%struct.uv__sysctl_args*, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
